# bitbots_navigation

bitbots_local_planner/cfg/: BBPlanner.cfg
bitbots_localization/: CMakeLists.txt  package.xml  test_warp.py
bitbots_localization/config/: config.yaml  localization_parameters.yaml
bitbots_localization/include/bitbots_localization/: ObservationModel.h  config.h  localization.h
bitbots_localization/scripts/: rviz_localization_sim.py
bitbots_localization/src/: ObservationModel.cpp  config.cpp  localization.cpp
bitbots_localization_handler/bitbots_localization_handler/: localization_handler.py
bitbots_move_base/config/: bitbots_local_planner_config.yaml  dwa_local_planner_config.yaml  global_costmap_config.yaml  local_costmap_config.yaml  move_base_config.yaml  velocity_smoother.yaml
bitbots_move_base/launch/: pathfinding_move_base.launch
bitbots_move_base/scripts/: obstacle_publisher.py
bitbots_path_planning/bitbots_path_planning/: path_planning.py
bitbots_visual_compass/cfg/: visualCompass.cfg
bitbots_visual_compass/config/: config.yaml  recorder.yaml
bitbots_visual_compass/scripts/: davros_recorder.py  field_recorder.py
bitbots_visual_compass/src/: visual_compass_setup.py  visual_compass_startup.py
bitbots_visual_compass/src/compass/: multiple.py
bitbots_visual_compass/src/compass/feature_detector/: __init__.py  akaze_feature_detector.py  interface.py  orb_feature_detector.py  sift_feature_detector.py
soccer_3d_object_layer/: CMakeLists.txt  package.xml
soccer_3d_object_layer/src/: base.cpp
